@@ -8,6 +8,10 @@ Version 3.4
 
 Improvement for delete: Support for deleting 3000 objects at a time. The old value was 500.
 GUI icon alignment.
+Memory improvements.
+Performance improvements.
+Fixed exception for "Delete every object and version".
+
 
 Version 3.3
 
